--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Custom -->
     <link href="css/custom.css" rel="stylesheet">
     <!-- font awesome -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -72,11 +72,12 @@
 
 <!-- begin Home Page -->
 <div id="homepage" class="temp homepg">
-  <h1 id="our_title">Engage 360</h1>
-  <h3 id="our_description"></h3>
-  <button type="button" onclick="whoIsEngage()" class="btn btn-default">Who We Are</button>
-  <div class="transitionbutton"><a href="#ourHistory">next<i class="fa fa-long-arrow-down fa-4"></i></a></div>
-
+  <div class="row">
+    <h1 id="our_title">Engage 360</h1>
+    <h3 id="our_description"></h3>
+    <button type="button" onclick="whoIsEngage()" class="btn btn-default">Who We Are</button>
+  <div class="transitionbutton"><a href="#ourHistory"><h1><i class="fa fa-long-arrow-down fa-2"></i></h1></a></div>
+</div>
 </div>
 <!-- end Home Page -->
 
@@ -190,7 +191,7 @@
       <!-- end Now -->
     </div>
    </div>
-   <div class="transitionbutton"><a href="#ourTrips">next</a></div>
+   <div class="transitionbutton"><a href="#ourTrips"><h1><i class="fa fa-long-arrow-down fa-2"></i></h1></a></div>
 </div>
 <!-- end our History -->
 
@@ -255,7 +256,7 @@
     </div> <!-- end col -->
    </div> <!-- end row -->
 
-   <div class="transitionbutton"><a href="#ourActivities">next</a></div>
+   <div class="transitionbutton"><a href="#ourActivities"><h1><i class="fa fa-long-arrow-down fa-2"></i></h1></a></div>
 </div>
 <!-- end our Trips -->
 
@@ -279,7 +280,7 @@
     <a href="#" class="targ" style="color: #0DD">link</a>
     <a href="#" class="targ" style="color: #DD0">link</a>
 </div> -->
-   <div class="transitionbutton"><a href="#getInvolved">next</a></div>
+   <div class="transitionbutton"><a href="#getInvolved"><h1><i class="fa fa-long-arrow-down fa-2"></i></h1></a></div>
 </div>
 <!-- end our Activities -->
 
@@ -297,7 +298,7 @@ Fill out my <a href="https://lroettges.wufoo.com/forms/q1raiuj517wqqd7">online f
   <iframe src="https://www.google.com/calendar/embed?src=laura.h.roettges%40gmail.com&ctz=America/Chicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 </div>
 </div>
-   <div class="transitionbutton"><a href="#meetTheTeam">next</a></div>
+   <div class="transitionbutton"><a href="#meetTheTeam"><h1><i class="fa fa-long-arrow-down fa-2"></i></h1></a></div>
 </div>
 <!-- end get Involved -->
 
