--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
   <div class="row">
     <h1 id="our_title">Engage 360</h1>
     <h3 id="our_description"></h3>
+    <a href="https://www.facebook.com/wustlengage?ref=br_rs">facebook</a>
+    <a href="https://portfolio.wustl.edu/organization/Engage360">portfolio</a>
+    <br>
     <button type="button" onclick="whoIsEngage()" class="btn btn-default">Who We Are</button>
   <div class="transitionbutton"><a href="#ourHistory"><h1><i class="fa fa-long-arrow-down fa-2"></i></h1></a></div>
 </div>
@@ -199,17 +202,23 @@
 <div id="ourTrips" class="temp">
    <h1>What does a service trip look like?</h1>
    <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-3">
       <img class="img-responsive" src="http://placehold.it/500x500">
-      <i class="fa fa-long-arrow-right fa-2x"></i>
+      </div> <!-- end col -->
+      <div class="col-md-1">
+      <i class="fa fa-long-arrow-right fa-2x disappear"></i>
+      <i class="fa fa-caret-square-o-down fa-2x appear"></i>
     </div> <!-- end col -->
   
-    <div class="col-md-4">
+    <div class="col-md-3">
       <img class="img-responsive" src="http://placehold.it/500x500">
-      <i class="fa fa-long-arrow-right fa-2x"></i>
+      </div> <!-- end col -->
+      <div class="col-md-1">
+      <i class="fa fa-long-arrow-right fa-2x disappear"></i>
+      <i class="fa fa-caret-square-o-down fa-2x appear"></i>
     </div> <!-- end col -->
     
-    <div class="col-md-4">
+    <div class="col-md-3">
       
       <!-- begin carosel -->
       <div id="trips" class="carousel slide" data-ride="carousel">
