--- a/index.html
+++ b/index.html
@@ -72,16 +72,15 @@
 
 <!-- begin Home Page -->
 <div id="homepage" class="temp homepg">
-  <div class="row">
     <h1 id="our_title">Engage 360</h1>
-    <h3 id="our_description"></h3>
-    <a href="https://www.facebook.com/wustlengage?ref=br_rs">facebook</a>
-    <a href="https://portfolio.wustl.edu/organization/Engage360">portfolio</a>
-    <br>
-    <button type="button" onclick="whoIsEngage()" class="btn btn-default">Who We Are</button>
-  <div class="transitionbutton"><a href="#ourHistory"><h1><i class="fa fa-long-arrow-down fa-2"></i></h1></a></div>
+    <div class="row my_desc"><h4 id="our_description"></h4></div>
+    <button id="weAre" type="button" onclick="whoIsEngage()" class="btn btn-default">What's Engage 360?</button>
+    <div class="row">
+    <a class="fpgLink" href="https://www.facebook.com/wustlengage?ref=br_rs">facebook</a>
+    <a class="fpgLink" href="https://portfolio.wustl.edu/organization/Engage360">portfolio</a>
+    </div>
 </div>
-</div>
+<div class="transitionbutton"><a href="#ourHistory"><h1><i class="fa fa-long-arrow-down fa-2"></i></h1></a></div>
 <!-- end Home Page -->
 
 <!-- begin our History -->
@@ -104,7 +103,28 @@
         <h4 class="modal-title" id="22ndWard">History of the Community</h4>
       </div>
       <div class="modal-body">
-        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+        <h4>Engage 360 began its mission by trying to understand the history of the comunity, particularly the area known as the 22nd Ward in St. Louis. Many of our efforts have been to support the community still residing in this area of the city. Below you will find some history of how the 22nd Ward came to be what it is today.</h4>
+<p>In March of 2012, BBC published a video entitled <a href="http://www.bbc.com/news/magazine-17361995">“Crossing a St. Louis street that divides communities”</a> that summaries some of the themes of this history.</p>
+
+<p>Back in the 1950’s, the 22nd Ward was a mostly white, middle class neighborhood. To many, it was one of the most desirable areas in which to live because it had affordable housing and was within walking distance of the Wellston Loop and the “public service” – a street car running from the city limits all the way downtown. In just about every way, the 22nd Ward was one of the best neighborhoods in the city.</p>
+
+<p>As restrictive covenants and legalized segregation became outlawed during the Civil Rights Movement in the late 50’s and early 60’s, African Americans saw an opportunity to also enjoy the benefits of living in such a wonderful location. Those who could afford it began to purchase homes in the neighborhood, just a few at a time. All of the people living in the neighborhood came from the same social class and held jobs at which they worked hard and received a solid paycheck. However, some were black and some were white, which would ultimately lead to major changes in the neighborhood.</p>
+
+<p>As the few African American families moved into the neighborhood, many whites feared them due to basic racism as well as the self-fulfilling prophecy that their property values would decline. Additionally, during the 50’s and the rise of the middle class, families could afford to own larger homes, thus many of the former residents chose to move from the smaller and older homes in the neighborhood to the newer and larger ones in the expanding suburbs.</p>
+
+<p>Thus, white flight ensued, and the exiting white families were so desperate to get rid of their homes that they would not show any judgment whatsoever as to whom they were selling them. As a result, the neighborhood changed from a mostly white middle class neighborhood to a lower income mostly African American one. These lower income residents had neither the time nor the money to maintain their homes, and the process of deterioration began in the late 60’s.</p>
+
+<p>Since the 60’s, black flight has also ensued, with the vast majority of middle class African American families opting to move out of the neighborhood as well, fearing increasing crime and basic blight. Those younger men and women who have had the opportunity to move out have usually chosen to do so, resulting in a continued cycle of losing talented youth to other parts of the city and county. Also, as the population of the neighborhood aged, the younger generations did not want their parents’ old homes, and either continued to sell or rent to anybody possible or simply left the homes to sit and eventually rot.</p>
+
+<p>All of these residential changes contributed to a major impact upon the Wellston Loop, once the major retail site for the City of St. Louis. The Wellston Loop was home to Woolworth’s and J.C. Penny as well as a host of local shops and restaurants. As the demographics of the area began to change, fewer shoppers came to Wellston. Additionally, crime rose dramatically as stores were routinely robbed and vandalized. Unable to afford additional security for these stores, owners opted to move out. Another factor contributing to the loss of stores was that those local owners aged, and their children chose not to continue the family business. Thus, these older business owners were forced to close up shop and either sell their property or leave it to the landlord to find a new renter.</p>
+
+<p>Today, the old Wellston Loop, formerly called Easton Avenue, is now Dr. Martin Luther King Drive. The facades of the old shops and restaurants can be seen today rotting and decaying and many of the old buildings have been torn down. What was once a hotbed of commerce and social activity now serves as the site for prostitution and drug deals. And here resides one of the major difficulties facing the neighborhood: the vast majority of the prostitutes and the drug dealers don’t live in the 22nd Ward. They come there to do their business and go back to another neighborhood in the county or the city. Most of the residents of the 22nd Ward are elderly people who made a commitment to stay in the neighborhood and in their homes. The problems they face on a daily basis do not necessarily come from their neighbors, but rather from outsiders coming in to do temporary damage and get out.</p>
+
+<p>According to the data provided by the City of St. Louis, the 22nd Ward is inhabited by 95.14% African Americans and 3.53% Caucasian. Single mother households make up 49% of the homes in the Ward as well, with nearly a quarter of all available housing units sitting vacant.</p>
+
+<p>One important item to note is that the vast majority of business owners in the 22nd Ward and along MLK Drive do not call the neighborhood home. Thus, there is also a drain of money out of the neighborhood as residents try to support “local” businesses. If nothing else, these businesses do provide vital goods and services within a convenient distance for much of the neighborhood.</p>
+
+
       </div>
       <div class="modal-footer">
       </div>
@@ -159,7 +179,14 @@
         <h4 class="modal-title" id="ourBeginning">Our Beginning</h4>
       </div>
       <div class="modal-body">
-        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+        <p>Engage 360 began as an initiative from the 2011-2012 VP of Programming, John Harrison. After taking a class which focused on community building within the St. Louis community taught by Washington University in St. Louis professor, <a href="https://www.stlbeacon.org/#!/content/33018/bob_hansman_093013">Bob Hansman</a>, John was inspired to find a way to better connect WashU students to the city that they live in. Hence came the initiation of Student Union's very own community service branch of leadership. The idea was to help various student organizations build their own service trips and help coordinate them in order for more people to have access to get involved in ways that they were passionate about. 
+        </p>
+        <p>John also began incoorporating a community service component into the Student Union pre-orientation program. This portion of the program typically includes a brief description of Engage 360's mission followed by a bus tour lead by Bob Hansman who continues to be an inspiration to students and amazing source of knowledge on the history of the community. Then students partake in a community service activity, either working on a community garden, a mural, or at an established organization such as Epworth or Annie Malone. Finally, students go get lunch at Mom's Kitchen which is one of the best places to eat when you want food to feed your soul!</p> 
+        <p>Learn more about Bob Hansman in the following articles:</p>
+        <ul>
+          <li></li>
+        </ul>
+
       </div>
       <div class="modal-footer">
       </div>
@@ -345,7 +372,7 @@ Fill out my <a href="https://lroettges.wufoo.com/forms/q1raiuj517wqqd7">online f
         <h4 class="modal-title" id="join_our_team">Join Our Team</h4>
       </div>
       <div class="modal-body">
-        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+        <a href="https://portfolio.wustl.edu/organization/Engage360/availableforms">Fill out application form on Portfolio!</a>
       </div>
       <div class="modal-footer">
       </div>
