--- a/index.html
+++ b/index.html
@@ -146,10 +146,55 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="restructure">Making Changes</h4>
+        <h4 class="modal-title" id="restructure">Beginning the Mural</h4>
       </div>
       <div class="modal-body">
-        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+        <p>Engage 360 began a mural in the 22nd Ward and in 2014 filled the last bits of it!</p>
+        <!-- begin carousel  -->
+        <div id="carousel-mural" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-mural" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-mural" data-slide-to="1"></li>
+    <li data-target="#carousel-mural" data-slide-to="2"></li>
+    <li data-target="#carousel-mural" data-slide-to="3"></li>
+    <li data-target="#carousel-mural" data-slide-to="4"></li>
+    <li data-target="#carousel-mural" data-slide-to="5"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="images/wall_1.jpg" alt="mural">
+    </div>
+    <div class="item">
+      <img src="images/wall_02.jpg" alt="mural">
+    </div>
+    <div class="item">
+      <img src="images/wall_03.jpg" alt="mural">
+    </div>
+    <div class="item">
+      <img src="images/wall_04.jpg" alt="mural">
+    </div>
+    <div class="item">
+      <img src="images/wall_05.jpg" alt="mural">
+    </div>
+    <div class="item">
+      <img src="images/wall_06.jpg" alt="mural">
+    </div>
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-mural" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-mural" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+        <!-- end carousel  -->
       </div>
       <div class="modal-footer">
       </div>
@@ -179,12 +224,15 @@
         <h4 class="modal-title" id="ourBeginning">Our Beginning</h4>
       </div>
       <div class="modal-body">
-        <p>Engage 360 began as an initiative from the 2011-2012 VP of Programming, John Harrison. After taking a class which focused on community building within the St. Louis community taught by Washington University in St. Louis professor, <a href="https://www.stlbeacon.org/#!/content/33018/bob_hansman_093013">Bob Hansman</a>, John was inspired to find a way to better connect WashU students to the city that they live in. Hence came the initiation of Student Union's very own community service branch of leadership. The idea was to help various student organizations build their own service trips and help coordinate them in order for more people to have access to get involved in ways that they were passionate about. 
+        <p>Engage 360 began as an initiative from the 2011-2012 VP of Programming, John Harrison. After taking a class which focused on community building within the St. Louis community taught by Washington University in St. Louis professor, <a href="https://www.stlbeacon.org/#!/content/33018/bob_hansman_093013">Bob Hansman</a>, John was inspired to find a way to better connect WashU students to the city that they live in. Hence came the initiation of <a href="http://su.wustl.edu/">Student Union</a>'s very own community service branch of leadership. The idea was to help various student organizations build their own service trips and help coordinate them in order for more people to have access to get involved in ways that they were passionate about. 
         </p>
         <p>John also began incoorporating a community service component into the Student Union pre-orientation program. This portion of the program typically includes a brief description of Engage 360's mission followed by a bus tour lead by Bob Hansman who continues to be an inspiration to students and amazing source of knowledge on the history of the community. Then students partake in a community service activity, either working on a community garden, a mural, or at an established organization such as Epworth or Annie Malone. Finally, students go get lunch at Mom's Kitchen which is one of the best places to eat when you want food to feed your soul!</p> 
         <p>Learn more about Bob Hansman in the following articles:</p>
         <ul>
-          <li></li>
+          <li><a href="https://www.youtube.com/watch?v=gPJa04ZD5-4">https://www.youtube.com/watch?v=gPJa04ZD5-4</a></li>
+          <li><a href="http://news.wustl.edu/news/Pages/27298.aspx">http://news.wustl.edu/news/Pages/27298.aspx</a></li>
+          <li><a href="http://www.stlcityfaces.com/about-2/what-is-city-faces/">http://www.stlcityfaces.com/about-2/what-is-city-faces/</a></li>
+          
         </ul>
 
       </div>
@@ -211,7 +259,7 @@
         <h4 class="modal-title" id="engageNow">What's new?</h4>
       </div>
       <div class="modal-body">
-        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+       <p>Engage 360 has been undergoing some changes over the past year. We have been working on updating <a href="Engage360Constitution.pdf" title="constitution">our constitution</a> and putting in serious efforts toward our PR and recruitment efforts. Muhammad Elahi is the current president and has been coordinating with past presidents such as John Harrison and Emma Tyler to make sure Engage 360 continues to fulfill its mission.</p>
       </div>
       <div class="modal-footer">
       </div>
@@ -338,7 +386,7 @@ Fill out my <a href="https://lroettges.wufoo.com/forms/q1raiuj517wqqd7">online f
 </div>
 <div class="col-md-6">
   <h3>Our Events Calendar</h3>
-  <iframe src="https://www.google.com/calendar/embed?src=laura.h.roettges%40gmail.com&ctz=America/Chicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+  <iframe src="https://www.google.com/calendar/embed?src=engage360%40su.wustl.edu&ctz=America/Chicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 </div>
 </div>
    <div class="transitionbutton"><a href="#meetTheTeam"><h1><i class="fa fa-long-arrow-down fa-2"></i></h1></a></div>
@@ -350,17 +398,22 @@ Fill out my <a href="https://lroettges.wufoo.com/forms/q1raiuj517wqqd7">online f
    <h1>Meet the Team!</h1>
    <div class="row">
     <div class="col-sm-6 col-md-3"><img class="img-responsive" src="images/crclplaceholder.png"></div>
-    <div class="col-sm-6 col-md-3"><img class="img-responsive" src="images/crclplaceholder.png"></div>
-    <div class="col-sm-6 col-md-3"><img class="img-responsive" src="images/crclplaceholder.png"></div>
-    <div class="col-sm-6 col-md-3"><img class="img-responsive" src="images/crclplaceholder.png"></div>
+    <div class="col-sm-6 col-md-3"><img class="img-responsive" src="images/barbar2.png"></div>
+    <div class="col-sm-6 col-md-3"><img class="img-responsive" src="images/noah.png"></div>
+    <div class="col-sm-6 col-md-3"><img class="img-responsive" src="images/sherry.png"></div>
+  </div>
+  <div class="row">
+    <div class="col-sm-6 col-md-3"><img class="img-responsive" src="images/nick.png"></div>
+    <div class="col-sm-6 col-md-3"><img class="img-responsive" src="images/sarah.png"></div>
+    <div class="col-sm-6 col-md-3"><img class="img-responsive" src="images/suvi.png"></div>
+    <div class="col-sm-6 col-md-3"><img class="img-responsive" src="images/cheyenne.png"></div>
+  </div>
    <div class="row">
-    <div class="col-sm-6 col-md-3"><img class="img-responsive" src="images/crclplaceholder.png"></div>
-    <div class="col-sm-6 col-md-3"><img class="img-responsive" src="images/crclplaceholder.png"></div>
-    <div class="col-sm-6 col-md-3"><img class="img-responsive" src="images/crclplaceholder.png"></div>
+    <div class="col-sm-6 col-md-3"><img class="img-responsive" src="images/alec.png"></div>
     <div class="col-sm-6 col-md-3">
       <!-- Want to Join the Team? -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#join_our_team">
-  <img class="img-responsive" src="images/crclplaceholder.png">
+  <img class="img-responsive" src="images/could_be_you.png">
 </button>
 
 <!-- Modal -->
