--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <!-- start 22nd ward history -->
       <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#22ndWard">
-  <img class="img-responsive" src="images/crclplaceholder.png">
+  <img class="img-responsive" src="images/communityHistory.png">
 </button>
 
 <!-- Modal -->
@@ -137,7 +137,7 @@
           <!-- start Engage restructuring -->
       <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#restructure">
-  <img class="img-responsive" src="images/crclplaceholder.png">
+  <img class="img-responsive" src="images/theMural.png">
 </button>
 
 <!-- Modal -->
@@ -212,7 +212,7 @@
         <!-- start our beginning -->
       <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ourBeginning">
-  <img class="img-responsive" src="images/crclplaceholder.png">
+  <img class="img-responsive" src="images/ourBeginnings.png">
 </button>
 
 <!-- Modal -->
@@ -247,7 +247,7 @@
        <!-- start Now -->
       <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#engageNow">
-  <img class="img-responsive" src="images/crclplaceholder.png">
+  <img class="img-responsive" src="images/nowMakingChanges.png">
 </button>
 
 <!-- Modal -->
@@ -278,7 +278,7 @@
    <h1>What does a service trip look like?</h1>
    <div class="row">
     <div class="col-md-3">
-      <img class="img-responsive" src="http://placehold.it/500x500">
+      <img class="img-responsive" src="images/wustl_seal.png">
       </div> <!-- end col -->
       <div class="col-md-1">
       <i class="fa fa-long-arrow-right fa-2x disappear"></i>
@@ -286,7 +286,7 @@
     </div> <!-- end col -->
   
     <div class="col-md-3">
-      <img class="img-responsive" src="http://placehold.it/500x500">
+      <img class="img-responsive" src="images/shuttle.png">
       </div> <!-- end col -->
       <div class="col-md-1">
       <i class="fa fa-long-arrow-right fa-2x disappear"></i>
@@ -302,27 +302,30 @@
     <li data-target="#trips" data-slide-to="0" class="active"></li>
     <li data-target="#trips" data-slide-to="1"></li>
     <li data-target="#trips" data-slide-to="2"></li>
+    <li data-target="#trips" data-slide-to="3"></li>
+    <li data-target="#trips" data-slide-to="4"></li>
+    <li data-target="#trips" data-slide-to="5"></li>
   </ol>
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="http://placehold.it/500x500" alt="...">
-      <div class="carousel-caption">
-        img 1
-      </div>
+      <img src="images/epworth.png" alt="epworth">
     </div>
     <div class="item">
-      <img src="http://placehold.it/500x500" alt="...">
-      <div class="carousel-caption">
-        img 2
-      </div>
+      <img src="images/comGarden.png" alt="community garden">
     </div>
     <div class="item">
-      <img src="http://placehold.it/500x500" alt="...">
-      <div class="carousel-caption">
-        img 3
-      </div>
+      <img src="images/hopeHouse.png" alt="hope house">
+    </div>
+    <div class="item">
+      <img src="images/tillies.png" alt="Tillie's Corner">
+    </div>
+    <div class="item">
+      <img src="images/annieMalone.png" alt="Annie Malone">
+    </div>
+    <div class="item">
+      <img src="images/suggest_a_place.png" alt="suggest a place">
     </div>
   </div>
 
@@ -348,17 +351,17 @@
 <div id="ourActivities" class="temp">
    <h1>What are some of our other projects?</h1>
    <div class="col-sm-6">
-    <div id="boxtop"><img class="img-responsive" src="http://www.placehold.it/800x400"></img></div>
+    <div id="boxtop"><img class="img-responsive" src="images/box-tops-logo.gif"></img></div>
     <button type="button" onclick="boxTops()" class="btn btn-default">Box Top Project</button>
    </div>
    <div class="col-sm-6">
     <ul class="testing" id="trashCan">
     
-     <li><img class="img-responsive" src="http://www.placehold.it/500x500/D00" /></li>
-    <li><img class="img-responsive" src="http://www.placehold.it/500x500/0D0" /></li>
-    <li><img class="img-responsive" src="http://www.placehold.it/500x500/00D" /></li>
-    <li><img class="img-responsive" src="http://www.placehold.it/500x500/0DD" /></li>
-    <li><img class="img-responsive" src="http://www.placehold.it/500x500/DD0" /></li>
+     <li><img class="img-responsive" src="images/trash_1st.png" /></li>
+    <li><img class="img-responsive" src="images/trash_2nd.png" /></li>
+    <li><img class="img-responsive" src="images/trash_3rdLast.png" /></li>
+    <li><img class="img-responsive" src="images/trash_2ndLast.png" /></li>
+    <li><img class="img-responsive" src="images/trash_end.png" /></li>
     
 </ul>
 <button type="button" onclick="throwTrash()" class="btn btn-default">WILD Clean Up</button>
