--- a/index.html
+++ b/index.html
@@ -445,7 +445,14 @@ Fill out my <a href="https://lroettges.wufoo.com/forms/q1raiuj517wqqd7">online f
     
 
       <footer class="site-footer">
-        <span class="site-footer-owner"><a href="https://github.com/lroettges/engage_360">Engage 360</a> is maintained by <a href="https://github.com/lroettges">lroettges</a>.</span>
+        <span class="site-footer-owner"><a href="https://github.com/lroettges/engage_360">Engage 360</a> is maintained by <a href="https://github.com/lroettges">lroettges</a>.</span> 
+        <h4><a href="mailto:engage360@su.wustl.edu" class="link-email">Email us!<span class="socialmedia"></span></a> & check out our...</h4>
+        <a href="Engage360Constitution.pdf" title="constitution">Constitution</a> 
+        , 
+        <a class="fpgLink" href="https://www.facebook.com/wustlengage?ref=br_rs">Facebook</a>
+        , and 
+    <a class="fpgLink" href="https://portfolio.wustl.edu/organization/Engage360">Portfolio Page</a>
+
 
       </footer>
  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
