--- a/index.html
+++ b/index.html
@@ -21,7 +21,25 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+<script>
+jQuery(function($) {
+  function fixDiv() {
+    var $cache = $('#practice');
+    if ($(window).scrollTop() > 900)
+      $cache.css({
+        'position': 'fixed',
+        'top': '900px'
+      });
+    else
+      $cache.css({
+        'position': 'relative',
+        'top': 'auto'
+      });
+  }
+  $(window).scroll(fixDiv);
+  fixDiv();
+});
+</script>
   </head>
 
 
@@ -47,12 +65,12 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="#homepage">Home<span class="sr-only">(current)</span></a></li>
       </ul>
-      <form class="navbar-form navbar-left" role="search">
+      <!-- <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+      </form> -->
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#whatWeDo" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">What We Do <span class="caret"></span></a>
@@ -70,18 +88,22 @@
 </nav>
   </div> <!-- end nav bar example  -->
 
+<div class="mywrap">
 <!-- begin Home Page -->
 <div id="homepage" class="temp homepg">
+    <div class="moveforward">
     <h1 id="our_title">Engage 360</h1>
     <div class="row my_desc"><h4 id="our_description"></h4></div>
     <button id="weAre" type="button" onclick="whoIsEngage()" class="btn btn-default">What's Engage 360?</button>
     <div class="row">
     <a class="fpgLink" href="https://www.facebook.com/wustlengage?ref=br_rs">facebook</a>
     <a class="fpgLink" href="https://portfolio.wustl.edu/organization/Engage360">portfolio</a>
+  </div>
     </div>
 </div>
-<div class="transitionbutton"><a href="#ourHistory"><h1><i class="fa fa-long-arrow-down fa-2"></i></h1></a></div>
+<!-- <div class="transitionbutton"><a href="#ourHistory"><h1><i class="fa fa-long-arrow-down fa-2"></i></h1></a></div> -->
 <!-- end Home Page -->
+<div id="practice" class="transColor"></div>
 
 <!-- begin our History -->
 <div id="ourHistory" class="temp">
@@ -346,7 +368,7 @@
    <div class="transitionbutton"><a href="#ourActivities"><h1><i class="fa fa-long-arrow-down fa-2"></i></h1></a></div>
 </div>
 <!-- end our Trips -->
-
+<div class="secondbgthing"></div>
 <!-- begin our Activities -->
 <div id="ourActivities" class="temp">
    <h1>What are some of our other projects?</h1>
@@ -377,6 +399,13 @@
    <div class="transitionbutton"><a href="#getInvolved"><h1><i class="fa fa-long-arrow-down fa-2"></i></h1></a></div>
 </div>
 <!-- end our Activities -->
+
+
+
+<div class="secondbg"></div>
+
+
+
 
 <!-- begin get Involved -->
 <div id="getInvolved" class="temp">
@@ -442,6 +471,7 @@ Fill out my <a href="https://lroettges.wufoo.com/forms/q1raiuj517wqqd7">online f
    <div class="transitionbutton"><a href="#homepage">back to top</a></div>
 </div>
 <!-- end Meet the Team -->
+</div> <!-- end my wrap -->
     
 
       <footer class="site-footer">
