--- a/index.html
+++ b/index.html
@@ -46,8 +46,13 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#homepage">Home<span class="sr-only">(current)</span></a></li>
+      <ul class="nav navbar-nav navbar-left">
+        <li >
+          <a class="fpgLink" href="https://www.facebook.com/wustlengage?ref=br_rs"><img style="max-height:50px;" src="images/fb_icon.png" alt="facebook link"></img></a></li>
+          <li>
+    <a class="fpgLink" href="https://portfolio.wustl.edu/organization/Engage360"><img style="max-height:50px;"  src="images/pf_icon.png" alt="portfolio link"></img></a> </li>
+    <li>
+    <a class="fpgLink" href="mailto:engage360@su.wustl.edu" class="link-email"> <img style="max-height:50px;" src="images/email_icon.png" alt="portfolio link"></img><span class="socialmedia"></span></a></li>
       </ul>
       <!-- <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
@@ -56,6 +61,7 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form> -->
       <ul class="nav navbar-nav navbar-right">
+        <li class="active"><a href="#homepage">Home<span class="sr-only">(current)</span></a></li>
         <li class="dropdown">
           <a href="#whatWeDo" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">What We Do <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -80,8 +86,9 @@
     <div class="row my_desc"><h4 id="our_description"></h4></div>
     <button id="weAre" type="button" onclick="whoIsEngage()" class="btn btn-default">What's Engage 360?</button>
     <div class="row">
-    <a class="fpgLink" href="https://www.facebook.com/wustlengage?ref=br_rs">facebook</a>
-    <a class="fpgLink" href="https://portfolio.wustl.edu/organization/Engage360">portfolio</a>
+    <a class="fpgLink" href="https://www.facebook.com/wustlengage?ref=br_rs"><img style="max-height:50px; margin:3% 1% 3% 0%;" src="images/fb_icon.png" alt="facebook link"></img></a>
+    <a class="fpgLink" href="https://portfolio.wustl.edu/organization/Engage360"><img style="max-height:50px; margin:3% 1% 3% 0%;"  src="images/pf_icon.png" alt="portfolio link"></img></a> 
+    <a href="mailto:engage360@su.wustl.edu" class="link-email"> <img style="max-height:50px;" src="images/email_icon.png" alt="portfolio link"></img><span class="socialmedia"></span></a>
   </div>
     </div>
 </div>
@@ -152,10 +159,12 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="restructure">Beginning the Mural</h4>
+        <h4 class="modal-title" id="restructure">Community Garden & Mural</h4>
       </div>
       <div class="modal-body">
-        <p>Engage 360 began a mural in the 22nd Ward and in 2014 filled the last bits of it!</p>
+        <p>Engage 360 and Washington University have a permanent commitment to a community garden on Martin Luther King Dr. in the 22nd Ward. Volunteers work at the garden to help develop a space where community members can grow healthy and sustainable foods. This is a great way to get outside and assist a community to have more access to healthy, locally growLockChain 10-5 gardenn foods and in the future as a site for community gatherings and functions.</p>
+
+        <p>Right around the corner is our community mural which we began in 2014 and recently filled the last bits of it! Check out some of the pictures below!</p>
         <!-- begin carousel  -->
         <div id="carousel-mural" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
@@ -266,6 +275,14 @@
       </div>
       <div class="modal-body">
        <p>Engage 360 has been undergoing some changes over the past year. We have been working on updating <a href="Engage360Constitution.pdf" title="constitution">our constitution</a> and putting in serious efforts toward our PR and recruitment efforts. Muhammad Elahi is the current president and has been coordinating with past presidents such as John Harrison and Emma Tyler to make sure Engage 360 continues to fulfill its mission.</p>
+      
+      <p>Here are a few of the places we have visited:</p>
+
+<p><a href="http://www.epworth.org/">Epworth Children and Family Services:</a> Epworth provides care for “at risk youth” with residential, day, in home counseling, street outreach for homeless youth, housing, education and life skills for older foster youth, and foster and emergency shelter to St. Louis area youth. Volunteers work at the emergency shelter, YES, on Washington Avenue, playing games and socializing with the youth there. This is a great way to spend time with kids (11 to age 18), learn about programs for “at risk youth”, and discover a renowned non-profit agency in WashU’s backyard.hope house</p>
+
+<p><a href="http://www.hopehousestl.org/Pages/default.html">Hope House:</a> Hope House seeks to provide safe transitional housing opportunities for families in need. Their Residential Program includes transitional housing and supportive services for the entire family. Hope House’s 32,000 square foot complex includes 50 fully furnished individual apartment units, administrative offices, a multipurpose Family Learning Center, a small health clinic and a 6,000 square foot, state-accredited Child Development Center. Families and single individuals in need of Hope House’s comprehensive approach to transitional housing are referred for services through the Transitional Housing Screening Board and the Catholic Charities Housing Resource Center.</p>
+
+<p><a href="http://lssliving.org/">Lutheran Senior Services:</a> Lutheran Senior Services provides services to allow older adults to live their lives to the fullest and maintain independence later in life. Volunteers will work at the Hylton Point apartments on Belt Avenue. Volunteers play board games with the adults and help them set up Facebook or other social media pages. This is a great opportunity to talk with older adults and help them stay informed and aware.</p>
       </div>
       <div class="modal-footer">
       </div>
@@ -275,7 +292,7 @@
       <!-- end Now -->
     </div>
    </div>
-   <div class="transitionbutton"><a href="#ourTrips"><h1><i class="fa fa-long-arrow-down fa-2"></i></h1></a></div>
+   <!-- <div class="transitionbutton"><a href="#ourTrips"><h1><i class="fa fa-long-arrow-down fa-2"></i></h1></a></div> -->
 </div>
 <!-- end our History -->
 
@@ -504,20 +521,21 @@ Fill out my <a href="https://lroettges.wufoo.com/forms/q1raiuj517wqqd7">online f
     </div>
   </div>
    <div class="row"></div>
-   <div class="transitionbutton"><a href="#homepage">back to top</a></div>
+   <div class="transitionbutton backhome"><a href="#homepage"><h3>back to top</h3></a></div>
 </div>
 <!-- end Meet the Team -->
 </div> <!-- end my wrap -->
     
 
       <footer class="site-footer">
-        <span class="site-footer-owner"><a href="https://github.com/lroettges/engage_360">Engage 360</a> is maintained by <a href="https://github.com/lroettges">lroettges</a>.</span> 
-        <h4><a href="mailto:engage360@su.wustl.edu" class="link-email">Email us!<span class="socialmedia"></span></a> & check out our...</h4>
+         <div class="moveRight"> 
         <a href="Engage360Constitution.pdf" title="constitution">Constitution</a> 
-        , 
-        <a class="fpgLink" href="https://www.facebook.com/wustlengage?ref=br_rs">Facebook</a>
-        , and 
-    <a class="fpgLink" href="https://portfolio.wustl.edu/organization/Engage360">Portfolio Page</a>
+          <a class="fpgLink" href="https://www.facebook.com/wustlengage?ref=br_rs"><img style="max-height:50px;" src="images/fb_icon.png" alt="facebook link"></img></a>
+    <a class="fpgLink" href="https://portfolio.wustl.edu/organization/Engage360"><img style="max-height:50px;"  src="images/pf_icon.png" alt="portfolio link"></img></a> 
+    <a class="fpgLink" href="mailto:engage360@su.wustl.edu" class="link-email"> <img style="max-height:50px;" src="images/email_icon.png" alt="portfolio link"></img><span class="socialmedia"></span></a>
+  </div>
+        <span class="site-footer-owner"><a href="https://github.com/lroettges/engage_360">Engage 360</a> is maintained by <a href="https://github.com/lroettges">lroettges</a>.</span> 
+
 
 
       </footer>
